fixes for bugs found by FoundBugs, small refactoring, increase of version number in description.xml